--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 <body>
  
  	<div data-role="page" id="spage">
- 		<div data-role="header" data-position="fixed">				
+ 		<div data-role="header" data-position="fixed" data-theme="b">				
  			<h1>Home</h1>
- 			<a href="#ologin" class="ui-btn-left">Operator Login</a>
+ 			<a href="#ologin" class="ui-btn-left" data-theme="a">Operator Login</a>
  		</div>
  		<div data-role="content">
  			<h2>About the Game</h2>
- 			<p>Random TextRandom TextRandom TextRandom TextRandom TextRandom TextRandom TextRandom TextRandom TextRandom TextRandom TextRandom TextRandom TextRandom TextRandom TextRandom TextRandom TextRandom TextRandom TextRandom TextRandom TextRandom TextRandom TextRandom TextRandom TextRandom TextRandom TextRandom TextRandom Text</p>
+ 			<p>Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text</p>
  		</div>
  		<div data-role="footer" data-position="fixed"> by: JakaDesigns
  		</div>
