--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
  		</div>
  		<div data-role="content">
  			<h2>About the Game</h2>
+ 			
  			<p>Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text Random Text</p>
  		</div>
  		<div data-role="footer" data-position="fixed"> by: JakaDesigns
@@ -41,7 +42,7 @@
  			<a href="#ologin" class="ui-btn-left">Operator Login</a>
  		</div>
  		<div data-role="content">
- 			
+ 			this is the session page
  		</div>
  		<div data-role="footer" data-position="fixed"> by: JakaDesigns
  		</div>
@@ -52,7 +53,7 @@
 			<h1>Operator Page</h1>
 		</div>
 		<div data-role="content">
-			<a href="#home">main</a>
+			this is the operator page
 		</div>
 		<div data-role="footer" data-position="fixed">by: JakaDesigns
 		</div>
@@ -60,21 +61,32 @@
 	
 	<div data-role="page" id="ologin">
 		<div data-role="header" data-position="fixed">
-			<h1>Operator Page</h1>
+			<h1>Operator Login Page</h1>
 		</div>
 		<div data-role="content">
-			
+			this the login page
 		</div>
 		<div data-role="footer" data-position="fixed">by: JakaDesigns
 		</div>
 	</div> <!--Home Page ends-->
 	
-	<div data-role="page" id="ologin">
+	<div data-role="page" id="admin">
 		<div data-role="header" data-position="fixed">
-			<h1>Operator Page</h1>
+			<h1>Admin Page</h1>
 		</div>
 		<div data-role="content">
-			<a href="#home">main</a>
+			this is the admin page
+		</div>
+		<div data-role="footer" data-position="fixed">by: JakaDesigns
+		</div>
+	</div> <!--Home Page ends-->
+	
+	<div data-role="page" id="question">
+		<div data-role="header" data-position="fixed">
+			<h1>Add Question Page</h1>
+		</div>
+		<div data-role="content">
+			this is the add question page
 		</div>
 		<div data-role="footer" data-position="fixed">by: JakaDesigns
 		</div>
