--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
  		<div data-role="content">
  			this is the session page
  		</div>
- 		<div data-role="footer" data-position="fixed"> by: JakaDesigns
+ 		<div data-role="footer" data-position="fixed">
+ 			<a href="#home" class="ui-btn ui-corner-all footer-button-left ">Home</a>
+ 			<a href="www.jakadesigns.com" class="ui-btn ui-corner-all footer-button-right ">Support</a>
+ 			<p id="logo">www.JaKaDesigns.com</p>
  		</div>
  	</div> <!--Home Page ends-->
  	
@@ -58,7 +61,10 @@
 		<div data-role="content">
 			this is the operator page
 		</div>
-		<div data-role="footer" data-position="fixed">by: JakaDesigns
+		<div data-role="footer" data-position="fixed">
+			<a href="#home" class="ui-btn ui-corner-all footer-button-left ">Home</a>
+			<a href="www.jakadesigns.com" class="ui-btn ui-corner-all footer-button-right ">Support</a>
+			<p id="logo">www.JaKaDesigns.com</p>
 		</div>
 	</div> <!--Home Page ends-->
 	
@@ -67,12 +73,19 @@
 			<h1>Operator Login Page</h1>
 		</div>
 		<div data-role="content">
-			this the login page
+			<form method="post" action="" id="log">
+				<label for="text-3">Username:</label>
+				<input type="text" data-clear-btn="true" name="text-3" id="text-3" value="">
+				<label for="password-2">Password:</label>
+				<input type="password" data-clear-btn="true" name="password-2" id="password-2" value="" autocomplete="off">
+				<input type="submit" data-inline="true" value="Submit">
+				<input type="reset" data-inline="true" value="Reset">
+			</form>
 		</div>
 		<div data-role="footer" data-position="fixed">
-			<h5>www.JaKaDesigns.com</h5> 
 			<a href="#home" class="ui-btn ui-corner-all footer-button-left ">Home</a>
 			<a href="www.jakadesigns.com" class="ui-btn ui-corner-all footer-button-right ">Support</a>
+			<p id="logo">www.JaKaDesigns.com</p>
 		</div>
 	</div> <!--Home Page ends-->
 	
@@ -83,7 +96,10 @@
 		<div data-role="content">
 			this is the admin page
 		</div>
-		<div data-role="footer" data-position="fixed">by: JakaDesigns
+		<div data-role="footer" data-position="fixed">
+			<a href="#home" class="ui-btn ui-corner-all footer-button-left ">Home</a>
+			<a href="www.jakadesigns.com" class="ui-btn ui-corner-all footer-button-right ">Support</a>
+			<p id="logo">www.JaKaDesigns.com</p>
 		</div>
 	</div> <!--Home Page ends-->
 	
@@ -94,8 +110,10 @@
 		<div data-role="content">
 			this is the add question page
 		</div>
-		<div data-role="footer" data-position="fixed">by: JakaDesigns
-		
+		<div data-role="footer" data-position="fixed">
+			<a href="#home" class="ui-btn ui-corner-all footer-button-left ">Home</a>
+			<a href="www.jakadesigns.com" class="ui-btn ui-corner-all footer-button-right ">Support</a>
+			<p id="logo">www.JaKaDesigns.com</p>
 		</div>
 	</div> <!--Home Page ends-->
 	
