--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 <body>
  
  	<div data-role="page" id="home">
- 		<div data-role="header" data-position="fixed" data-theme="b">				
+ 		<div data-role="header" data-position="fixed" data-theme="a">				
  			<h1>Home</h1>
- 			<a href="#ologin" class="ui-btn-left" data-theme="a">Operator Login</a>
+ 			<a href="#ologin" class="ui-btn-left" data-theme="b">Operator Login</a>
  		</div>
  		<div data-role="content">
  			
@@ -78,8 +78,8 @@
 				<input type="text" data-clear-btn="true" name="text-3" id="text-3" value="">
 				<label for="password-2">Password:</label>
 				<input type="password" data-clear-btn="true" name="password-2" id="password-2" value="" autocomplete="off">
-				<input type="submit" data-inline="true" value="Submit">
-				<input type="reset" data-inline="true" value="Reset">
+				<input type="submit" data-inline="true" data-theme="b" value="Submit">
+				<input type="reset" data-inline="true" data-theme="b" value="Reset">
 			</form>
 		</div>
 		<div data-role="footer" data-position="fixed">
