--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
  			<h1>Home</h1>
  		</div>
  		<div data-role="content">
- 			<p>an image will go here for the logo</p>
- 			<p>A little about the app</p>
+ 			<!--<p>an image will go here for the logo</p>
+ 			<p>A little about the app</p>-->
  			
  			<a href="#opage" class="ui-btn">Begin</a>
  		</div>
@@ -78,8 +78,8 @@
  	
  	<div data-role="page" id="spage">
  		<div data-role="header" data-position="fixed">
- 			<a href="#Agroup" class="ui-btn-left" id="htext">Add Group</a>
-			<a href="#Gstan" class="ui-btn-rigth" id="htext">Group Standings</a>
+ 			<a href="#Agroup" class="ui-btn-left" id="htext">Add Team</a>
+			<a href="#Gstan" class="ui-btn-rigth" id="htext">Team Standings</a>
  			<h1>Session Page</h1>
  		</div>
  		<div data-role="content">
